sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:25: error: too many arguments for method getValeur: (x$1: Int)Int
    getValeur(i,minimum)
             ^